Fixed T&C alignment

--- a/src/client/Components/Signup/SignUp.module.css
+++ b/src/client/Components/Signup/SignUp.module.css
@@ -186,3 +186,8 @@ li {
   background-color: var(--background-color);
   padding: 1rem;
 }
+
+/* SignUp.module.css */
+.label {
+  margin-left: 20px; /* Adjust the value as needed */
+}
